src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Account field on a Product indicates the Account that offers this product to its customers.</description>
        <inlineHelpText>The Account field on a Product indicates the Account that offers this product to its customers.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates that this product is also part of a Collection.</description>
        <inlineHelpText>This field indicates that this product is also part of a Collection.</inlineHelpText>
        <label>Collection</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <description>Book Warehouse Solutions does not use the standard Pricebook2 object in their solution.  Instead, the current price for a Book or Collection is stored on the Product2 (Book) object itself.</description>
        <inlineHelpText>The current price for a Book or Collection.</inlineHelpText>
        <label>Current Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <description>This is the quantity of this particular product in inventory.</description>
        <inlineHelpText>This is the quantity of this particular product in inventory.</inlineHelpText>
        <label>Inventory</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Account__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Current_Price__c</columns>
        <columns>Collection__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Books</label>
    </listViews>
    <listViews>
        <fullName>Book_Collections</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Account__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Current_Price__c</columns>
        <columns>Collection__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Collection</value>
        </filters>
        <label>Book Collections</label>
    </listViews>
    <listViews>
        <fullName>Book_Inventory</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Account__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Current_Price__c</columns>
        <columns>Collection__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Inventory</value>
        </filters>
        <label>Book Inventory</label>
    </listViews>
    <listViews>
        <fullName>Hardcover_Books</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Account__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Current_Price__c</columns>
        <columns>Collection__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Hardcover</value>
        </filters>
        <label>Hardcover Books</label>
    </listViews>
    <listViews>
        <fullName>Paperback_Books</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Account__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Current_Price__c</columns>
        <columns>Collection__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Paperback</value>
        </filters>
        <label>Paperback Books</label>
    </listViews>
</CustomObject>